--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ tensorflow = "^2.19.0"
 mne = "^1.9.0"
 sweetviz = "^2.3.1"
 scipy = "^1.15.3"
+ann-visualizer = "^2.5"
 
 
 [tool.poetry.group.dev.dependencies]
