--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-pandas = "^2.2.3"
-numpy = "2.1.0"
+numpy = "^1.23.5"
 matplotlib = "^3.10.1"
 seaborn = "^0.13.2"
 scikit-learn = "^1.6.1"
@@ -38,11 +37,12 @@ tenacity = "^9.1.2"
 celery = "^5.5.2"
 python-multipart = "^0.0.20"
 mlflow = "^2.22.0"
-tensorflow = "^2.19.0"
 mne = "^1.9.0"
 sweetviz = "^2.3.1"
 scipy = "^1.15.3"
 ann-visualizer = "^2.5"
+pandas = "2.0.3"
+tensorflow = {path = "/home/ali/Downloads/tensorflow-2.12.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
 
 
 [tool.poetry.group.dev.dependencies]
