--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-numpy = "^1.23.5"
 matplotlib = "^3.10.1"
 seaborn = "^0.13.2"
 scikit-learn = "^1.6.1"
@@ -42,6 +41,7 @@ sweetviz = "^2.3.1"
 scipy = "^1.15.3"
 ann-visualizer = "^2.5"
 pandas = "2.0.3"
+numpy = "1.23.5"
 tensorflow = {path = "/home/ali/Downloads/tensorflow-2.12.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
 
 
